
rcli (0.7.1-1) unstable; urgency=medium

  * `rcli` tries to catch early if no valid R installation exists and if so, offers to installs R 4.0.5
  * Fixed an error with the `release` alias


rcli (0.7.0-1) unstable; urgency=medium

  * Add `rcli remove` subcommand

rcli (0.6.0-1) unstable; urgency=medium

  * rcli now tries to be more helpful to first time users by offering to install R using the CRAN installer if no R CRAN installation is detected.
  * rcli does not suggest homebrew anymore for the initial installation of R as this would result in possibly inadvertent automatic updates for new R releases
  * rcli now tries to exist early if no installation of Rosetta2 is detected when trying to install x86 R versions
  * `rcli ls` is now an alias to `rcli list`
  * `rcli list` shows again the installed R versions
  * `rcli ls` can now also show all existing R user libraries via `rcli ls user_libs`
  * `rcli` now assumes the correct architecture when switching from `arm64` to `x86_64` versions
  * Two new environment variable config options:
    * `RCLI_ASK_USER_LIB` allows to suppress `rcli` asking if a user library should be created if none exists on macOS
    * `RCLI_QUIET` suppresses the verbose "Download R version XY" and other messages during execution

rcli (0.5.1-1) unstable; urgency=medium

  * Fix reported version number (#16)

-- Patrick Schratz <patrick.schratz@gmail.com>  Sun, 23 Jan 2022 19:44:15 +0100

rcli (0.5.0-1) unstable; urgency=medium

  * Allow to force reinstall R versions (#14)
  * Add support for R version aliases (e.g. `release` or `devel`) (#13)
  * Move documentation to "Gitbook" at https://rcli.pat-s.me

-- Patrick Schratz <patrick.schratz@gmail.com>  Sun, 24 Dec 2021 19:44:15 +0100

rcli (0.4.1-1) unstable; urgency=medium

  * Linux: Fix installations from source.

-- Patrick Schratz <patrick.schratz@gmail.com>  Sun, 17 Dec 2021 19:44:15 +0100

rcli (0.4.0-1) unstable; urgency=medium

  * Added r-devel support for Linux