@@ -3,6 +3,7 @@ rcli (0.7.1-1) unstable; urgency=medium
 
   * `rcli` tries to catch early if no valid R installation exists and if so, offers to installs R 4.0.5
   * Fixed an error with the `release` alias
+  * `rcli ls user_libs` now also works on Linux
 
 
 rcli (0.7.0-1) unstable; urgency=medium
